[gd_scene load_steps=6 format=3 uid="uid://bjf5nufe3r2ej"]

[ext_resource type="Script" uid="uid://dnfcn757ccrb1" path="res://Scenes/YouWin.gd" id="1_a7cdt"]
[ext_resource type="Texture2D" uid="uid://brjogx3he6r6c" path="res://sprites/BG/tewatd.png" id="2_wpycq"]
[ext_resource type="Texture2D" uid="uid://jva0xqc6dyou" path="res://sprites/BUTTONS/buttoEXIT1.png" id="3_3pahf"]
[ext_resource type="Texture2D" uid="uid://q1oolwur2sgd" path="res://sprites/BUTTONS/buttoEXIT11.png" id="4_75fnr"]
[ext_resource type="AudioStream" uid="uid://ixibl02xh3hn" path="res://Sounds/Music/Victory.mp3" id="5_mk7mp"]

[node name="YouWin" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_a7cdt")

[node name="BG" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_left = -30.0
offset_top = -29.0
offset_right = 680.0
offset_bottom = 386.0
texture = ExtResource("2_wpycq")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 362.0

[node name="MainMenuButton" type="TextureButton" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("3_3pahf")
texture_pressed = ExtResource("4_75fnr")

[node name="ConfirmLabel" type="Label" parent="MainContainer"]
modulate = Color(0.392157, 0.0705882, 0.368627, 1)
layout_mode = 2

[node name="RewardGrid" type="GridContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="VictoryMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_mk7mp")
parameters/looping = true

[connection signal="pressed" from="MainContainer/MainMenuButton" to="." method="_go_to_main_menu"]
